# EssayGenerator

./: main.py  pyproject.toml
essay_gen/: app.py  commands.py  extensions.py  settings.py  utils.py
essay_gen/public/: __init__.py  forms.py  views.py
essay_gen/templates/: 401.html  404.html  500.html  footer.html  layout.html  nav.html
essay_gen/templates/public/: about.html  generator.html  index.html
