[tool.poetry]
name = "essaygenerator"
version = "0.1.0"
description = ""
authors = ["Kyle Wan <kyle94024@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Werkzeug = "^1.0.1"
click = "^7.1.2"
Flask-DebugToolbar = "^0.11.0"
Flask-WTF = "^0.14.3"
WTForms = "^2.3.3"
environs = "^9.2.0"
replit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
